--- a/ppesupply.html
+++ b/ppesupply.html
@@ -187,6 +187,48 @@ body {
     }
 }
 
+	  #clients {
+	padding: 60px 0;
+}
+
+#clients .clients-wrap {
+	border-top: 1px solid #d6eaff;
+	border-left: 1px solid #d6eaff;
+	margin-bottom: 30px;
+}
+
+#clients .client-logo {
+	padding: 64px;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
+	border-right: 1px solid #d6eaff;
+	border-bottom: 1px solid #d6eaff;
+	overflow: hidden;
+	background: #fff;
+	height: 160px;
+}
+
+#clients img {
+	transition: all 0.4s ease-in-out;
+}
+.section-header h3 {
+	font-size: 36px;
+	color: #283d50;
+	text-align: center;
+	font-weight: 500;
+	position: relative;
+}
+
   </style>
 </head>
 <body>
@@ -397,6 +439,323 @@ body {
 		
     </div>
 </div>
+
+			<section id="clients" class="section-bg">
+
+	<div class="container">
+
+		<div class="section-header">
+			<h3 style="color: #1560bd; font-weight: bold;">Our Esteemed Clients With Our Associated Partners</h3> <br>
+
+		</div>
+
+		<div class="row no-gutters clients-wrap clearfix wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
+
+
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v1.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v2.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v3.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v4.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v5.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+
+
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v6.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v7.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v8.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v9.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v10.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v11.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v12.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v13.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v14.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v15.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v16.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v17.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v18.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v19.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v20.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v21.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v22.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v23.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v24.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v25.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v26.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v27.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v28.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v29.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v30.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v31.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v32.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v33.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v34.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v35.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v36.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v37.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v38.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v39.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v40.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v41.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v42.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v43.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v44.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v45.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v46.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v47.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v48.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v49.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v50.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v51.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v52.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v53.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v54.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v55.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v56.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v57.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/v58.jpeg" class="img-fluid" alt="">
+				</div>
+			</div>
+
+		</div>
+
+	</div>
+
+</section>
 
 <!-- WhatsApp Icon -->
 <!-- WhatsApp Icon -->
