--- a/fireequipments.html
+++ b/fireequipments.html
@@ -683,7 +683,7 @@ body {
 											<a href="contact.html" class="btn r-04 btn--theme hover--tra-primary" style="background-color: #f0f0f0;">Get started for free</a>
 										</div>
 										
-										<!-- Button Text -->>
+										<!-- Button Text -->
 										
 
 									</div>
