--- a/index.html
+++ b/index.html
@@ -1187,6 +1187,88 @@ max-width: 680px !important;
 				</div>
 			</div>
 
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/Jalavihar Park, Hyderabad.jpg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/Costal Projects Limited.jpg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/Devyani International Limited.jpg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/GMR Hyd Airport.jpg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/Narayana.jpg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/JSW Cement.png" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/Nuziveedu Seeds.jpg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/Sidarth Hospital.png" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/Pachavati Group.jpg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/US Consulate, Hyderabad.jpg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/UAE Exchange.jpg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/CK Birla Group-HIL.png" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/HTC India Pvt Ltd.jpg" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/KMV Projects.png" class="img-fluid" alt="">
+				</div>
+			</div>
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/Fortune Towers, Hitech City, Hyderabad.jpg" class="img-fluid" alt="">
+				</div>
+			</div>
+
+			<div class="col-lg-3 col-md-4 col-xs-6">
+				<div class="client-logo">
+					<img src="images/vindus_clients_images/Indian Medical Heritage.png" class="img-fluid" alt="">
+				</div>
+			</div>
+
 		</div>
 
 	</div>
