--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ body {
 	<div class="modal-dialog" role="document">
 	  <div class="modal-content">
 		<div class="modal-header">
-		  <h5 class="modal-title" id="exampleModalLongTitle">Enter Your Email</h5>
+		  <h5 class="modal-title" id="exampleModalLongTitle">Enter Your Details</h5>
 		  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 			<span aria-hidden="true">&times;</span>
 		  </button>
