--- a/aboveneck.html
+++ b/aboveneck.html
@@ -175,7 +175,7 @@
 
 					<!-- MOBILE HEADER -->
 				    <div class="wsmobileheader clearfix">	  	
-				    	<span class="smllogo"><img src="images/vindus_clients_images/FullColor_IconOnly_1024x1024_72dpi.jpg" alt="mobile-logo"></span>
+				    	<span class="smllogo" style="position:fixed" ><img src="images/vindus_clients_images/FullColor_IconOnly_1024x1024_72dpi.jpg" alt="mobile-logo"></span>
 				    	<a id="wsnavtoggle" class="wsanimated-arrow"><span></span></a>	
 				 	</div>
 
