--- a/fireprotection.html
+++ b/fireprotection.html
@@ -690,7 +690,7 @@
 		<div class="row justify-content-center">
 			<div class="col-md-10 col-lg-9">
 				<div class="brands-title mb-50">
-					<h5 class="s-18">MLC esteemed clients with associated partners</h5>
+				<h3 style="color: #1560bd; font-weight: bold;">Our Esteemed Clients With Our Associated Partners</h3> <br>
 				</div>
 			</div>
 		</div>
