--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@ body {
     border-radius: 20px;
     background-color: rgb(9, 157, 231); /* Background color on hover */
     transition: background-color 0.3s ease, border-color 0.3s ease; /* Transition effect */
+    height:100px;
 }
 
 .modal-dialog{
