--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@ body {
 
 
 <meta name="msvalidate.01" content="6563BD27BD1CA3A69E01903840892EB1" />
-
+google-site-verification=vG5-zKB2oaOcyoRD2DISXW-uyQC4Ir181JLJlESPSMY
 	<body> 
 <br>
 
