--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ body {
 </style>
 	</head>
 
-google-site-verification=vG5-zKB2oaOcyoRD2DISXW-uyQC4Ir181JLJlESPSMY
+<meta name="google-site-verification" content="vG5-zKB2oaOcyoRD2DISXW-uyQC4Ir181JLJlESPSMY" />
 <meta name="msvalidate.01" content="6563BD27BD1CA3A69E01903840892EB1" />
 
 	<body> 
