--- a/about.html
+++ b/about.html
@@ -5,11 +5,9 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>Mahalakshmi Consultancy</title>
+		<meta name="description" content="Learn more about ML Consultancy and our commitment to providing top-quality fire safety systems and equipment.">
+    <meta name="keywords" content="ML Consultancy, Fire safety, Fire equipment, Safety systems, About us">
+    <title>About Us - ML Consultancy Fire Safety System Equipment</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
