--- a/Blog.html
+++ b/Blog.html
@@ -4,11 +4,9 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		<meta name="description" content="Read the latest articles and updates about fire safety systems and equipment by ML Consultancy in Hyderabad.">
+    <meta name="keywords" content="ML Consultancy, Fire safety blog, Fire protection articles, Safety equipment updates, Hyderabad">
+    <title>Blog - ML Consultancy Fire Safety Systems Hyderabad</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
