--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="description" content="Learn more about ML Consultancy and our commitment to providing top-quality fire safety systems and equipment.">
+		<meta name="Best fire safety system" content="Learn more about ML Consultancy and our commitment to providing top-quality fire safety systems and equipment.">
     <meta name="keywords" content="ML Consultancy, Fire safety, Fire equipment, Safety systems, About us">
-    <title>About Us - ML Consultancy Fire Safety System Equipment</title>
+    <title>ML Consultancy Fire Safety System Equipment</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
