--- a/aboveneck.html
+++ b/aboveneck.html
@@ -4,11 +4,10 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		    <meta name="description" content="Explore ML Consultancy's range of above-neck protection equipment designed to keep you safe from fire hazards in Hyderabad.">
+    <meta name="keywords" content="ML Consultancy, Above neck protection, Fire safety gear, Head and face protection, Hyderabad">
+    <title>Above Neck Protection - ML Consultancy Fire Safety Systems Hyderabad</title>
+
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
