--- a/admin.html
+++ b/admin.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>User Information</title>
+ <meta name="description" content="Administrative section for managing ML Consultancy fire safety system equipment and user accounts in Hyderabad.">
+    <meta name="keywords" content="ML Consultancy, Admin panel, Fire safety management, User management, Hyderabad">
+    <title>Admin  ML Consultancy Fire Safety Systems Hyderabad</title>
+</head>
 <!-- SweetAlert CDN -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <style>
