--- a/auditing.html
+++ b/auditing.html
@@ -4,11 +4,11 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		<meta name="description" content="Professional auditing services by ML Consultancy in Hyderabad to ensure your fire safety systems are compliant and effective.">
+    <meta name="keywords" content="ML Consultancy, Fire safety audit, Safety system audit, Compliance audit, Fire protection audit, Hyderabad">
+    <title>Auditing Services - ML Consultancy Fire Safety Systems Hyderabad</title>
+</head>
+<body>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
