--- a/bodyprotection.html
+++ b/bodyprotection.html
@@ -4,11 +4,11 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		<meta name="description" content="High-quality body protection equipment designed by ML Consultancy to keep you safe from fire-related hazards in Hyderabad.">
+    <meta name="keywords" content="ML Consultancy, Body protection, Fire safety gear, Protective equipment, Hyderabad">
+    <title>Body Protection Equipment - ML Consultancy Fire Safety Systems Hyderabad</title>
+</head>
+<body>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
