--- a/certification.html
+++ b/certification.html
@@ -4,11 +4,9 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		<meta name="description" content="Explore the certifications and standards that ML Consultancy's fire safety equipment meets to ensure your safety in Hyderabad.">
+    <meta name="keywords" content="ML Consultancy, Fire safety certifications, Safety standards, Certified fire equipment, Hyderabad">
+    <title>Certifications - ML Consultancy Fire Safety Systems Hyderabad</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
