--- a/certification1.html
+++ b/certification1.html
@@ -4,11 +4,9 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		<meta name="description" content="Detailed information about the first set of certifications ML Consultancy's fire safety equipment meets in Hyderabad.">
+    <meta name="keywords" content="ML Consultancy, Fire safety certifications, Certified equipment, Safety standards, Hyderabad">
+    <title>Certification Details 1 - ML Consultancy Fire Safety Systems Hyderabad</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
