--- a/certification1.html
+++ b/certification1.html
@@ -4,7 +4,7 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="description" content="Detailed information about the first set of certifications ML Consultancy's fire safety equipment meets in Hyderabad.">
+		<meta name="ISO Certification" content="Detailed information about the first set of certifications ML Consultancy's fire safety equipment meets in Hyderabad.">
     <meta name="keywords" content="ML Consultancy, Fire safety certifications, Certified equipment, Safety standards, Hyderabad">
     <title>Certification Details 1 - ML Consultancy Fire Safety Systems Hyderabad</title>
 							
