--- a/classroom.html
+++ b/classroom.html
@@ -4,11 +4,9 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		<meta name="description" content="Join ML Consultancy's classroom training sessions in Hyderabad to learn about fire safety systems and equipment.">
+    <meta name="keywords" content="ML Consultancy, Classroom training, Fire safety training, Safety education, Hyderabad">
+    <title>Classroom Training - ML Consultancy Fire Safety Systems Hyderabad</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
