--- a/documentation.html
+++ b/documentation.html
@@ -4,11 +4,9 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		 <meta name="description" content="Access important documentation and manuals for ML Consultancy's fire safety systems and equipment in Hyderabad.">
+    <meta name="keywords" content="ML Consultancy, Fire safety documentation, Safety manuals, Equipment guides, Hyderabad india">
+    <title>Documentation - ML Consultancy Fire Safety Systems Hyderabad</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
