--- a/ehstrainings.html
+++ b/ehstrainings.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ML Consultants</title>
+   <meta name="description" content="Enroll in EHS (Environmental, Health, and Safety) training programs offered by ML Consultancy in Hyderabad to enhance workplace safety.">
+    <meta name="keywords" content="ML Consultancy, EHS training, Environmental safety, Health and safety, Hyderabad">
+    <title>EHS Training Programs - ML Consultancy Fire Safety Systems Hyderabad</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   
   		<!-- SITE TITLE -->
