--- a/firedetection.html
+++ b/firedetection.html
@@ -4,11 +4,9 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		<meta name="description" content="Explore advanced fire detection systems offered by ML Consultancy in Hyderabad to ensure early detection and safety.">
+    <meta name="keywords" content="ML Consultancy, Fire detection systems, Fire safety, Early detection, Hyderabad">
+    <title>Fire Detection Systems - ML Consultancy Fire Safety Systems Hyderabad</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
