--- a/fireequipments.html
+++ b/fireequipments.html
@@ -4,11 +4,9 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		 <meta name="description" content="ML Consultancy provides a wide range of fire safety equipment to protect you and your property in Hyderabad.">
+    <meta name="keywords" content="ML Consultancy, Fire safety equipment, Fire protection, Safety gear, Hyderabad">
+    <title>Fire Safety Equipment - ML Consultancy Fire Safety Systems Hyderabad</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
