--- a/fireprotection.html
+++ b/fireprotection.html
@@ -4,11 +4,9 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		<meta name="description" content="Learn about ML Consultancy's fire protection solutions designed to keep your property and personnel safe in Hyderabad.">
+    <meta name="keywords" content="ML Consultancy, Fire protection, Fire safety solutions, Safety systems, Hyderabad">
+    <title>Fire Protection Solutions - ML Consultancy Fire Safety Systems Hyderabad</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
