--- a/handprotection.html
+++ b/handprotection.html
@@ -4,11 +4,10 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		<title>Hand Protection Solutions | ML Consultancy - Hyderabad, Telangana</title>
+<meta name="description" content="ML Consultancy in Hyderabad, Telangana offers a range of hand protection solutions to ensure workplace safety. Explore our selection of protective gloves and gear." />
+<meta name="keywords" content="Hand protection, protective gloves, safety solutions, ML Consultancy, Hyderabad, Telangana, workplace safety" />
+
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
