--- a/healthandsafety.html
+++ b/healthandsafety.html
@@ -4,11 +4,10 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		  <title>Health and Safety Audit</title>
+		<title>Health and Safety Services | ML Consultancy - Hyderabad, Telangana</title>
+<meta name="description" content="Ensure comprehensive health and safety compliance with services from ML Consultancy in Hyderabad, Telangana. We offer expert guidance and solutions." />
+<meta name="keywords" content="Health and safety, safety compliance, ML Consultancy, Hyderabad, Telangana, safety services, workplace health" />
+
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
