--- a/ims.html
+++ b/ims.html
@@ -4,11 +4,10 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		<title>Integrated Management Systems | ML Consultancy - Hyderabad, Telangana</title>
+<meta name="description" content="ML Consultancy in Hyderabad, Telangana provides integrated management systems to streamline your business operations and enhance efficiency." />
+<meta name="keywords" content="Integrated management systems, IMS, ML Consultancy, Hyderabad, Telangana, business efficiency, management solutions" />
+
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
