--- a/incidentinvestigation.html
+++ b/incidentinvestigation.html
@@ -4,11 +4,10 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-          <title>Incident Investigation Report</title>
+		<title>Incident Investigation Services | ML Consultancy - Hyderabad, Telangana</title>
+<meta name="description" content="Conduct thorough incident investigations with the help of ML Consultancy in Hyderabad, Telangana. We provide detailed analysis and reports to improve safety." />
+<meta name="keywords" content="Incident investigation, safety analysis, ML Consultancy, Hyderabad, Telangana, safety reports, workplace incidents" />
+
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
