--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
   		<!-- SITE TITLE -->
 		  <meta charset="utf-8">
 		  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-		  <meta name="keywords" content="Responsive, Digital Product">
-		  <meta name="viewport" content="width=device-width, initial-scale=1">
-				  `
-			<!-- SITE TITLE -->
-		  <title>ML Consultancy</title>
+		  <title>ML Consultancy | Safety and Management Solutions - Hyderabad, Telangana</title>
+<meta name="description" content="Welcome to ML Consultancy in Hyderabad, Telangana. We specialize in safety and management solutions to enhance your business operations and ensure compliance." />
+<meta name="keywords" content="ML Consultancy, safety solutions, management services, Hyderabad, Telangana, business consultancy, compliance" />
+
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 			
 		<!-- FAVICON AND TOUCH ICONS -->
