--- a/login.html
+++ b/login.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <!-- Bootstrap CSS -->
+  
+  <!-- Bootstrap CSS --<title>Client Login | ML Consultancy - Hyderabad, Telangana</title>
+<meta name="description" content="Login to your ML Consultancy account to access personalized safety and management services in Hyderabad, Telangana." />
+<meta name="keywords" content="Client login, ML Consultancy, Hyderabad, Telangana, safety services, management solutions, account access" />
+>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
   <style>
