--- a/mlcfiresystemservices.html
+++ b/mlcfiresystemservices.html
@@ -4,11 +4,10 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		<title>Fire System Services | ML Consultancy - Hyderabad, Telangana</title>
+<meta name="description" content="ML Consultancy in Hyderabad, Telangana provides comprehensive fire system services to ensure the safety of your premises. Contact us for expert fire safety solutions." />
+<meta name="keywords" content="Fire system services, fire safety, ML Consultancy, Hyderabad, Telangana, fire protection, safety solutions" />
+
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
