--- a/online.html
+++ b/online.html
@@ -4,11 +4,10 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		<title>Online Safety Training | ML Consultancy - Hyderabad, Telangana</title>
+<meta name="description" content="ML Consultancy in Hyderabad, Telangana offers online safety training courses to help you ensure workplace safety and compliance. Enroll now for expert-led training." />
+<meta name="keywords" content="Online safety training, safety courses, ML Consultancy, Hyderabad, Telangana, workplace safety, online training" />
+
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
