--- a/ppesupply.html
+++ b/ppesupply.html
@@ -4,11 +4,10 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		<title>PPE Supply and Distribution | ML Consultancy - Hyderabad, Telangana</title>
+<meta name="description" content="ML Consultancy in Hyderabad, Telangana provides high-quality personal protective equipment (PPE) supply and distribution services to ensure workplace safety." />
+<meta name="keywords" content="PPE supply, personal protective equipment, ML Consultancy, Hyderabad, Telangana, safety gear, workplace safety" />
+
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
