--- a/safetystudies.html
+++ b/safetystudies.html
@@ -5,11 +5,10 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="keywords" content="Responsive, Digital Product">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Safety Studies and Analysis | ML Consultancy - Hyderabad, Telangana</title>
+<meta name="description" content="Conduct detailed safety studies and analysis with ML Consultancy in Hyderabad, Telangana. We provide expert insights to enhance workplace safety." />
+<meta name="keywords" content="Safety studies, safety analysis, ML Consultancy, Hyderabad, Telangana, workplace safety, safety insights" />
 
-    <!-- SITE TITLE -->
-    <title>ML Consultancy</title>
 
     <!-- FAVICON AND TOUCH ICONS -->
 
