--- a/services.html
+++ b/services.html
@@ -4,11 +4,10 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		<title>Our Services | ML Consultancy - Hyderabad, Telangana</title>
+<meta name="description" content="Explore the range of services offered by ML Consultancy in Hyderabad, Telangana. We provide expert solutions in safety, management, and compliance." />
+<meta name="keywords" content="Services, ML Consultancy, Hyderabad, Telangana, safety solutions, management services, compliance" />
+
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
