--- a/survelliance.html
+++ b/survelliance.html
@@ -4,11 +4,10 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Responsive, Digital Product">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-				
-  		<!-- SITE TITLE -->
-		<title>ML Consultancy</title>
+		<title>Surveillance and Monitoring Services | ML Consultancy - Hyderabad, Telangana</title>
+<meta name="description" content="Ensure safety and security with ML Consultancy's surveillance and monitoring services in Hyderabad, Telangana. We offer comprehensive surveillance solutions." />
+<meta name="keywords" content="Surveillance services, monitoring, ML Consultancy, Hyderabad, Telangana, security solutions, safety surveillance" />
+
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
