--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   		<!-- SITE TITLE -->
 		  <meta charset="utf-8">
 		  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-		  <title>ML Consultancy | Safety and Management Solutions - Hyderabad, Telangana</title>
+		  <title>ML Consultancy | Fire safety equipment- Hyderabad, Telangana</title>
 <meta name="description" content="Welcome to ML Consultancy in Hyderabad, Telangana. We specialize in safety and management solutions to enhance your business operations and ensure compliance." />
 <meta name="keywords" content="ML Consultancy, safety solutions, management services, Hyderabad, Telangana, business consultancy, compliance" />
 
