--- a/index.html
+++ b/index.html
@@ -463,6 +463,8 @@ body {
 
 </style>
 	<meta name="google-site-verification" content="vG5-zKB2oaOcyoRD2DISXW-uyQC4Ir181JLJlESPSMY" />
+
+	<meta name="google-site-verification" content="-ECINhQvyWuPbPMjYWEgrrAwC2ogJCJipBIp3ECVQe0" />
 	</head>
 
 <meta name="msvalidate.01" content="6563BD27BD1CA3A69E01903840892EB1" />
