--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   		<!-- SITE TITLE -->
 		  <meta charset="utf-8">
 		  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-		  <title>ML Consultancy | Fire safety equipment- Hyderabad, Telangana</title>
-<meta name="description" content="Welcome to ML Consultancy in Hyderabad, Telangana. We specialize in safety and management solutions to enhance your business operations and ensure compliance." />
+		  <title>ML Consultancy | Fire safety system equipment</title>
+<meta name="description" content="Welcome to ML Consultancy,We specialize in Fire safety equipment,Fire Alarm Systems,Emergency Lighting Systems,Fire Suppression System,Smoke Detection Systems,Regulatory Compliance." />
 <meta name="keywords" content="ML Consultancy, safety solutions, management services, Hyderabad, Telangana, business consultancy, compliance" />
 
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
