--- a/firedetection.html
+++ b/firedetection.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="description" content="Explore advanced fire detection systems offered by ML Consultancy in Hyderabad to ensure early detection and safety.">
-    <meta name="keywords" content="ML Consultancy, Fire detection systems, Fire safety, Early detection, Hyderabad">
-    <title>Fire Detection Systems - ML Consultancy Fire Safety Systems Hyderabad</title>
+    <meta name="keywords" content="ML Consultancy, Fire detection systems, Fire safety, Early detection,Smoke Detectors,Heat Detectors,Flame Detectors,Gas Detectors,Multi-Sensor Detectors,Carbon Monoxide Detectors,Methane Detectors,CO2 Fire Extinguishers,Water Fire Extinguishers ">
+    <title>Fire Detection Systems - ML Consultancy Fire Safety Systems equipment&Protection</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
