--- a/online.html
+++ b/online.html
@@ -4,9 +4,9 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Online Safety Training | ML Consultancy - Hyderabad, Telangana</title>
-<meta name="description" content="ML Consultancy in Hyderabad, Telangana offers online safety training courses to help you ensure workplace safety and compliance. Enroll now for expert-led training." />
-<meta name="keywords" content="Online safety training, safety courses, ML Consultancy, Hyderabad, Telangana, workplace safety, online training" />
+		<title></title>
+<meta name="description" />
+<meta name="keywords" content="" />
 
 							
 		<!-- FAVICON AND TOUCH ICONS -->
