--- a/online.html
+++ b/online.html
@@ -4,9 +4,10 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="keywords" content="Responsive, Digital Product">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title></title>
-<meta name="description" />
-<meta name="keywords" content="" />
+
 
 							
 		<!-- FAVICON AND TOUCH ICONS -->
