--- a/online.html
+++ b/online.html
@@ -6,7 +6,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="keywords" content="Responsive, Digital Product">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title></title>
+		<title>Ml Consultancy</title>
+	<meta name="description" content="Comprehensive guide and solutions for fire safety systems, including fire alarms, sprinklers, and fire suppression systems." />
+<meta name="keywords" content="fire safety system, fire alarms, fire sprinklers, fire suppression, fire detection, fire protection, emergency response, fire prevention, safety equipment, fire safety regulations" />
+
 
 
 							
