--- a/Blog.html
+++ b/Blog.html
@@ -4,8 +4,10 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="description" content="Read the latest articles and updates about fire safety systems and equipment by ML Consultancy in Hyderabad.">
-    <meta name="keywords" content="ML Consultancy, Fire safety blog, Fire protection articles, Safety equipment updates, Hyderabad">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="best fire safety system by ML Consultancy in Hyderabad,iso,isi certification,govt aprovel">
+    <meta name="keywords" content="ML Consultancy, Fire safety blog, Fire protection articles, Safety equipments,iso,isi certification">
     <title>Blog - ML Consultancy Fire Safety Systems Hyderabad</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
