--- a/404.html
+++ b/404.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="" content="Page not found. Discover ML Consultancy's range of fire safety system equipment and services in Hyderabad.">
-    <meta name="keywords" content="404, Page not found, ML Consultancy, Fire safety equipment, Hyderabad,Telangana.">
+    <meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="" content="Discover mlcqehs ML Consultancy's range of best fire safety system equipment and services in Hyderabad">
+    <meta name="keywords" content="mlcqehs, ML Consultancy, Fire safety equipment,veciles fire system,factory fire safety system Hyderabad,Telangana.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
    
