--- a/Pharma.html
+++ b/Pharma.html
@@ -4,6 +4,8 @@
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Specialized fire safety solutions for the pharmaceutical industry by ML Consultancy in Hyderabad, ensuring compliance and safety.">
     <meta name="keywords" content="ML Consultancy, Pharmaceutical fire safety, Pharma safety systems, Fire protection in pharma, Hyderabad">
     <title>Pharmaceutical Fire Safety Solutions - ML Consultancy Hyderabad</title>						
