--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
  <meta name="description" content="Administrative section for managing ML Consultancy fire safety system equipment and user accounts in Hyderabad.">
     <meta name="keywords" content="ML Consultancy, Admin panel, Fire safety management, User management, Hyderabad">
+ <meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Admin  ML Consultancy Fire Safety Systems Hyderabad</title>
 </head>
 <!-- SweetAlert CDN -->
