--- a/auditing.html
+++ b/auditing.html
@@ -6,6 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="description" content="Professional auditing services by ML Consultancy in Hyderabad to ensure your fire safety systems are compliant and effective.">
     <meta name="keywords" content="ML Consultancy, Fire safety audit, Safety system audit, Compliance audit, Fire protection audit, Hyderabad">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Auditing Services - ML Consultancy Fire Safety Systems Hyderabad</title>
 </head>
 <body>
