--- a/certification.html
+++ b/certification.html
@@ -7,6 +7,8 @@
 		<meta name="description" content="Explore the certifications and standards that ML Consultancy's fire safety equipment meets to ensure your safety in Hyderabad.">
     <meta name="keywords" content="ML Consultancy, Fire safety certifications, Safety standards, Certified fire equipment, Hyderabad">
     <title>Certifications - ML Consultancy Fire Safety Systems Hyderabad</title>
+<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
