--- a/certification1.html
+++ b/certification1.html
@@ -7,6 +7,8 @@
 		<meta name="ISO Certification" content="Detailed information about the first set of certifications ML Consultancy's fire safety equipment meets in Hyderabad.">
     <meta name="keywords" content="ML Consultancy, Fire safety certifications, Certified equipment, Safety standards, Hyderabad">
     <title>Certification Details 1 - ML Consultancy Fire Safety Systems Hyderabad</title>
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
