--- a/certification2.html
+++ b/certification2.html
@@ -6,7 +6,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="ISI certifications " content="Detailed information about the first set of certifications ML Consultancy's fire safety equipment meets in Hyderabad.">
     <meta name="keywords" content="ML Consultancy, Fire safety certifications, Certified equipment, Safety standards, Hyderabad">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Certification Details 1 - ML Consultancy Fire Safety Systems Hyderabad</title>
+	
 							
 		<!-- FAVICON AND TOUCH ICONS -->
 		
