--- a/certification4.html
+++ b/certification4.html
@@ -6,6 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="description" content="Detailed information about the first set of certifications ML Consultancy's fire safety equipment meets in Hyderabad.">
     <meta name="keywords" content="ML Consultancy, Fire safety certifications, Certified equipment, Safety standards, Hyderabad">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Certification - ML Consultancy Fire Safety Systems Hyderabad,Kothapet</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
