--- a/classroom.html
+++ b/classroom.html
@@ -6,6 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="description" content="Join ML Consultancy's classroom training sessions in Hyderabad to learn about fire safety systems and equipment.">
     <meta name="keywords" content="ML Consultancy, Classroom training, Fire safety training, Safety education, Hyderabad">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Classroom Training - ML Consultancy Fire Safety Systems Hyderabad</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
