--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="best fire safety equipment" content="Get in touch with ML Consultancy in Hyderabad for all your fire safety system needs and inquiries.">
     <meta name="keywords" content="ML Consultancy, Contact, Fire safety inquiries, Fire protection, Hyderabad">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ML Consultancy Fire Safety Systems TG,TS</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
