--- a/corporate.html
+++ b/corporate.html
@@ -6,6 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="description" content="ML Consultancy provides comprehensive fire safety solutions for corporate clients in Hyderabad, ensuring a safe working environment.">
     <meta name="keywords" content="ML Consultancy, Corporate fire safety, Business fire protection, Workplace safety, Hyderabad">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Corporate Fire Safety Solutions - ML Consultancy Hyderabad</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
