--- a/ehstrainings.html
+++ b/ehstrainings.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
    <meta name="description" content="Enroll in EHS (Environmental, Health, and Safety) training programs offered by ML Consultancy in Hyderabad to enhance workplace safety.">
     <meta name="keywords" content="ML Consultancy, EHS training, Environmental safety, Health and safety, Hyderabad">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>EHS Training Programs - ML Consultancy Fire Safety Systems Hyderabad</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   
