--- a/fallprotection.html
+++ b/fallprotection.html
@@ -6,6 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		 <meta name="description" content="ML Consultancy offers reliable fall protection equipment and systems to ensure safety from falls and accidents in Hyderabad.">
     <meta name="keywords" content="ML Consultancy, Fall protection, Safety equipment, Fall prevention, Hyderabad">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fall Protection Equipment - ML Consultancy Fire Safety Systems Hyderabad</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
