--- a/firedetection.html
+++ b/firedetection.html
@@ -6,6 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="description" content="Explore advanced fire detection systems offered by ML Consultancy in Hyderabad to ensure early detection and safety.">
     <meta name="keywords" content="ML Consultancy, Fire detection systems, Fire safety, Early detection,Smoke Detectors,Heat Detectors,Flame Detectors,Gas Detectors,Multi-Sensor Detectors,Carbon Monoxide Detectors,Methane Detectors,CO2 Fire Extinguishers,Water Fire Extinguishers ">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fire Detection Systems - ML Consultancy Fire Safety Systems equipment&Protection</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
