--- a/fireequipments.html
+++ b/fireequipments.html
@@ -6,6 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		 <meta name="description" content="ML Consultancy provides a wide range of fire safety equipment to protect you and your property in Hyderabad.">
     <meta name="keywords" content="ML Consultancy, Fire safety equipment, Fire protection, Safety gear, Hyderabad">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fire Safety Equipment - ML Consultancy Fire Safety Systems Hyderabad</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
