--- a/firesuppression.html
+++ b/firesuppression.html
@@ -7,6 +7,8 @@
 		<title>Fire Suppression Systems | ML Consultancy - Hyderabad, Telangana</title>
 <meta name="description" content="ML Consultancy in Hyderabad, Telangana offers advanced fire suppression systems to protect your assets and ensure safety. Contact us for reliable fire safety solutions." />
 <meta name="keywords" content="Fire suppression, fire suppression systems, ML Consultancy, Hyderabad, Telangana, fire safety, fire protection" />
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 							
 		<!-- FAVICON AND TOUCH ICONS -->
