--- a/footprotection.html
+++ b/footprotection.html
@@ -7,6 +7,8 @@
 		<title>Foot Protection Equipment | ML Consultancy - Hyderabad, Telangana</title>
 <meta name="description" content="Discover high-quality foot protection equipment at ML Consultancy in Hyderabad, Telangana. We provide reliable safety gear to protect your workforce." />
 <meta name="keywords" content="Foot protection, safety equipment, ML Consultancy, Hyderabad, Telangana, safety gear, workplace safety" />
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 							
 		<!-- FAVICON AND TOUCH ICONS -->
