--- a/handprotection.html
+++ b/handprotection.html
@@ -7,6 +7,8 @@
 		<title>Hand Protection Solutions | ML Consultancy - Hyderabad, Telangana</title>
 <meta name="description" content="ML Consultancy in Hyderabad, Telangana offers a range of hand protection solutions to ensure workplace safety. Explore our selection of protective gloves and gear." />
 <meta name="keywords" content="Hand protection, protective gloves, safety solutions, ML Consultancy, Hyderabad, Telangana, workplace safety" />
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 							
 		<!-- FAVICON AND TOUCH ICONS -->
