--- a/healthandsafety.html
+++ b/healthandsafety.html
@@ -7,6 +7,8 @@
 		<title>Health and Safety Services | ML Consultancy - Hyderabad, Telangana</title>
 <meta name="description" content="Ensure comprehensive health and safety compliance with services from ML Consultancy in Hyderabad, Telangana. We offer expert guidance and solutions." />
 <meta name="keywords" content="Health and safety, safety compliance, ML Consultancy, Hyderabad, Telangana, safety services, workplace health" />
+<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 							
 		<!-- FAVICON AND TOUCH ICONS -->
