--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   		<!-- SITE TITLE -->
 		  <meta charset="utf-8">
 		  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="keywords" content="Responsive, Digital Product">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 		  <title>ML Consultancy | Fire safety system equipment</title>
 <meta name="description" content="Welcome to ML Consultancy,We specialize in Fire safety equipment,Fire Alarm Systems,Emergency Lighting Systems,Fire Suppression System,Smoke Detection Systems,Regulatory Compliance." />
 <meta name="keywords" content="ML Consultancy, safety solutions, management services, Hyderabad, Telangana, business consultancy, compliance" />
